# Harp-Simulator

./: .gitignore  CMakeLists.txt  harp_simulator.cbp  harp_window.cpp  harp_window.h  main.cpp  moc.bat  sound_out.cpp  sound_out.h  spectrum.h
